Video still not working and I will focus on charting the info that comes in from the drone.

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jmuxer": "^1.1.1",
     "lodash": "^4.17.11",
     "socket.io": "^2.2.0"
   }
